package com.example.walky.application

import androidx.appcompat.app.AppCompatActivity
import com.example.walky.domain.model.GPS
import com.example.walky.domain.model.MyMap
import com.google.android.gms.maps.GoogleMap

/**
 * 現在地の取得やアクティビティの開始などの指示を統括している
 */

class MapApplicationService(private val activity: AppCompatActivity) {
    private lateinit var myMap: MyMap

    /**
     * マップの準備ができたら現在地の取得をお願いする
     */
    fun startUp(mMap: GoogleMap) {
        val gps = GPS(activity)
        gps.enableCurrentLocation(mMap)
        myMap = MyMap(mMap)
    }

}